Add Profile Update

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -3,6 +3,7 @@
     "/adminlte/plugins/fontawesome-free/css/all.css": "/adminlte/plugins/fontawesome-free/css/all.css?id=42b8897772b8f90a5a1b",
     "/adminlte/plugins/overlayScrollbars/css/OverlayScrollbars.css": "/adminlte/plugins/overlayScrollbars/css/OverlayScrollbars.css?id=bf47ccc229e3b3368bc4",
     "/adminlte/js/adminlte.js": "/adminlte/js/adminlte.js?id=92206f4641a846afb588",
+    "/adminlte/js/siaji.js": "/adminlte/js/siaji.js?id=222b0345da1cebf3814f",
     "/adminlte/plugins/jquery/jquery.js": "/adminlte/plugins/jquery/jquery.js?id=11c05eb286ed576526bf",
     "/adminlte/plugins/bootstrap/js/bootstrap.bundle.js": "/adminlte/plugins/bootstrap/js/bootstrap.bundle.js?id=a9247b1fe21ee409d0b3",
     "/adminlte/plugins/overlayScrollbars/js/jquery.overlayScrollbars.js": "/adminlte/plugins/overlayScrollbars/js/jquery.overlayScrollbars.js?id=305e705f1d489499ef1d"
