Add Kabupaten Module, etc

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,15 +1,18 @@
 {
-    "/adminlte/css/adminlte.css": "/adminlte/css/adminlte.css?id=d99bf3bdf32471fa6642",
+    "/adminlte/css/adminlte.css": "/adminlte/css/adminlte.css?id=14eca8de55a62cc03763",
     "/adminlte/css/siaji.css": "/adminlte/css/siaji.css?id=89cc42bbf4e832baafd2",
-    "/adminlte/plugins/fontawesome-free/css/all.css": "/adminlte/plugins/fontawesome-free/css/all.css?id=42b8897772b8f90a5a1b",
-    "/adminlte/plugins/overlayScrollbars/css/OverlayScrollbars.css": "/adminlte/plugins/overlayScrollbars/css/OverlayScrollbars.css?id=bf47ccc229e3b3368bc4",
-    "/adminlte/plugins/datatables-bs4/css/dataTables.bootstrap4.css": "/adminlte/plugins/datatables-bs4/css/dataTables.bootstrap4.css?id=1758e9d3c2304ff1d0d8",
-    "/adminlte/js/adminlte.js": "/adminlte/js/adminlte.js?id=92206f4641a846afb588",
+    "/adminlte/plugins/fontawesome-free/css/all.css": "/adminlte/plugins/fontawesome-free/css/all.css?id=da9aca32ed693ed28f5d",
+    "/adminlte/plugins/overlayScrollbars/css/OverlayScrollbars.css": "/adminlte/plugins/overlayScrollbars/css/OverlayScrollbars.css?id=9398fc018166af222650",
+    "/adminlte/plugins/datatables-bs4/css/dataTables.bootstrap4.css": "/adminlte/plugins/datatables-bs4/css/dataTables.bootstrap4.css?id=f5828ea3e6c7a89f02df",
+    "/adminlte/plugins/select2/css/select2.min.css": "/adminlte/plugins/select2/css/select2.min.css?id=ba5948c0bda0f5f26bd3",
+    "/adminlte/plugins/select2-bootstrap4-theme/select2-bootstrap4.min.css": "/adminlte/plugins/select2-bootstrap4-theme/select2-bootstrap4.min.css?id=edbf41bc52a2b786256c",
+    "/adminlte/js/adminlte.js": "/adminlte/js/adminlte.js?id=c2c16f86edc67f25b9c3",
     "/adminlte/js/siaji.js": "/adminlte/js/siaji.js?id=0dbfe42110ab0d4eaf01",
-    "/adminlte/plugins/jquery/jquery.js": "/adminlte/plugins/jquery/jquery.js?id=11c05eb286ed576526bf",
-    "/adminlte/plugins/bootstrap/js/bootstrap.bundle.js": "/adminlte/plugins/bootstrap/js/bootstrap.bundle.js?id=a9247b1fe21ee409d0b3",
-    "/adminlte/plugins/overlayScrollbars/js/jquery.overlayScrollbars.js": "/adminlte/plugins/overlayScrollbars/js/jquery.overlayScrollbars.js?id=305e705f1d489499ef1d",
-    "/adminlte/plugins/datatables/jquery.dataTables.js": "/adminlte/plugins/datatables/jquery.dataTables.js?id=5c7804ee8c7e5f939a28",
-    "/adminlte/plugins/datatables-bs4/js/dataTables.bootstrap4.js": "/adminlte/plugins/datatables-bs4/js/dataTables.bootstrap4.js?id=73bd54551128bcbe4561",
-    "/adminlte/plugins/bs-custom-file-input/bs-custom-file-input.min.js": "/adminlte/plugins/bs-custom-file-input/bs-custom-file-input.min.js?id=07fee065ac26033deb53"
+    "/adminlte/plugins/jquery/jquery.js": "/adminlte/plugins/jquery/jquery.js?id=320fa28debd36316365b",
+    "/adminlte/plugins/bootstrap/js/bootstrap.bundle.js": "/adminlte/plugins/bootstrap/js/bootstrap.bundle.js?id=bd1604da466f7535f078",
+    "/adminlte/plugins/overlayScrollbars/js/jquery.overlayScrollbars.js": "/adminlte/plugins/overlayScrollbars/js/jquery.overlayScrollbars.js?id=f8ab8c6d0ce1039d05c6",
+    "/adminlte/plugins/datatables/jquery.dataTables.js": "/adminlte/plugins/datatables/jquery.dataTables.js?id=27564c7379d69ba3f582",
+    "/adminlte/plugins/datatables-bs4/js/dataTables.bootstrap4.js": "/adminlte/plugins/datatables-bs4/js/dataTables.bootstrap4.js?id=0fcb36b1c246913aaf9b",
+    "/adminlte/plugins/bs-custom-file-input/bs-custom-file-input.min.js": "/adminlte/plugins/bs-custom-file-input/bs-custom-file-input.min.js?id=36966b0a7af168632b42",
+    "/adminlte/plugins/select2/js/select2.full.min.js": "/adminlte/plugins/select2/js/select2.full.min.js?id=3bd2aa3186773fdc0792"
 }
