Add Seeder, Add Ayro-UI for Public Asset

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,15 @@
 {
+    "/ayro-ui/css/bootstrap.min.css": "/ayro-ui/css/bootstrap.min.css?id=a15c2ac3234aa8f6064e",
+    "/ayro-ui/css/LineIcons.css": "/ayro-ui/css/LineIcons.css?id=54d11756557f8f9affec",
+    "/ayro-ui/css/default.css": "/ayro-ui/css/default.css?id=12e70413252bd36ea7e0",
+    "/ayro-ui/css/style.css": "/ayro-ui/css/style.css?id=fc8600e6191299164a8e",
+    "/ayro-ui/js/vendor/modernizr-3.6.0.min.js": "/ayro-ui/js/vendor/modernizr-3.6.0.min.js?id=8b9e755b33e4961ac40a",
+    "/ayro-ui/js/vendor/jquery-1.12.4.min.js": "/ayro-ui/js/vendor/jquery-1.12.4.min.js?id=4f252523d4af0b478c81",
+    "/ayro-ui/js/bootstrap.min.js": "/ayro-ui/js/bootstrap.min.js?id=e1d98d47689e00f8ecbc",
+    "/ayro-ui/js/popper.min.js": "/ayro-ui/js/popper.min.js?id=56456db9d72a4b380ed3",
+    "/ayro-ui/js/imagesloaded.pkgd.min.js": "/ayro-ui/js/imagesloaded.pkgd.min.js?id=e2c1a80b99251b7b9472",
+    "/ayro-ui/js/jquery.appear.min.js": "/ayro-ui/js/jquery.appear.min.js?id=64531fe766285a4f78a6",
+    "/ayro-ui/js/main.js": "/ayro-ui/js/main.js?id=1e0d77074cbe9319e2ac",
     "/adminlte/css/adminlte.css": "/adminlte/css/adminlte.css?id=14eca8de55a62cc03763",
     "/adminlte/css/siaji.css": "/adminlte/css/siaji.css?id=89cc42bbf4e832baafd2",
     "/adminlte/plugins/fontawesome-free/css/all.css": "/adminlte/plugins/fontawesome-free/css/all.css?id=da9aca32ed693ed28f5d",
