--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.2",
         "arcanedev/log-viewer": "^5.1",
         "fideloper/proxy": "^4.0",
+        "jorenvanhocht/laravel-share": "^3.1",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^1.0",
         "yajra/laravel-datatables-oracle": "^9.7"
