--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "jorenvanhocht/laravel-share": "^3.1",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^1.0",
+        "spatie/laravel-permission": "^3.4",
         "yajra/laravel-datatables-oracle": "^9.7"
     },
     "require-dev": {
