--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,9 @@
         "classmap": [
             "database/seeds",
             "database/factories"
+        ],
+        "files": [
+            "app/Helpers/function.php"
         ]
     },
     "autoload-dev": {
