Change Ayro-UI Template with Fancy by Colorlib

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,15 +1,18 @@
 {
-    "/ayro-ui/css/bootstrap.min.css": "/ayro-ui/css/bootstrap.min.css?id=8fe70898895271ddc628",
-    "/ayro-ui/css/LineIcons.css": "/ayro-ui/css/LineIcons.css?id=84bb8d0b9ae1dbdf1d68",
-    "/ayro-ui/css/default.css": "/ayro-ui/css/default.css?id=12e70413252bd36ea7e0",
-    "/ayro-ui/css/style.css": "/ayro-ui/css/style.css?id=858825830fe8fe24d9ec",
-    "/ayro-ui/js/vendor/modernizr-3.6.0.min.js": "/ayro-ui/js/vendor/modernizr-3.6.0.min.js?id=50618549de4d3de4b9c4",
-    "/ayro-ui/js/vendor/jquery-1.12.4.min.js": "/ayro-ui/js/vendor/jquery-1.12.4.min.js?id=618538b4ab9639d444e9",
-    "/ayro-ui/js/bootstrap.min.js": "/ayro-ui/js/bootstrap.min.js?id=0a958254db529f99f475",
-    "/ayro-ui/js/popper.min.js": "/ayro-ui/js/popper.min.js?id=07c3b4cdb94a0d798766",
-    "/ayro-ui/js/imagesloaded.pkgd.min.js": "/ayro-ui/js/imagesloaded.pkgd.min.js?id=81545aed80e2c8b710b7",
-    "/ayro-ui/js/jquery.appear.min.js": "/ayro-ui/js/jquery.appear.min.js?id=64531fe766285a4f78a6",
-    "/ayro-ui/js/main.js": "/ayro-ui/js/main.js?id=1e0d77074cbe9319e2ac",
+    "/fancy/css/style.css": "/fancy/css/style.css?id=513bcaaca683b38c1b3e",
+    "/fancy/css/responsive/responsive.css": "/fancy/css/responsive/responsive.css?id=6c98b601dee0ef13d276",
+    "/fancy/css/bootstrap/bootstrap.min.css": "/fancy/css/bootstrap/bootstrap.min.css?id=95df726a7936892cf645",
+    "/fancy/css/others/animate.css": "/fancy/css/others/animate.css?id=cb67371414710491ee37",
+    "/fancy/css/others/magnific-popup.css": "/fancy/css/others/magnific-popup.css?id=2239303d6f05be6b812d",
+    "/fancy/css/others/owl.carousel.min.css": "/fancy/css/others/owl.carousel.min.css?id=11f8f55299612003d161",
+    "/fancy/css/others/font-awesome.min.css": "/fancy/css/others/font-awesome.min.css?id=11561142ddf4044e4897",
+    "/fancy/css/others/elegant-font.css": "/fancy/css/others/elegant-font.css?id=4a5af63d39dd424949e7",
+    "/fancy/css/others/themify-icons.css": "/fancy/css/others/themify-icons.css?id=79a7ca0b383da3da212b",
+    "/fancy/js/jquery/jquery-2.2.4.min.js": "/fancy/js/jquery/jquery-2.2.4.min.js?id=710458dd559c957714ac",
+    "/fancy/js/bootstrap/popper.min.js": "/fancy/js/bootstrap/popper.min.js?id=499c736b389842485292",
+    "/fancy/js/bootstrap/bootstrap.min.js": "/fancy/js/bootstrap/bootstrap.min.js?id=46b549bdc90920f18a91",
+    "/fancy/js/others/plugins.js": "/fancy/js/others/plugins.js?id=445c7d4d9e0ff01625ff",
+    "/fancy/js/active.js": "/fancy/js/active.js?id=cbf5d6e261b3cbf02032",
     "/adminlte/css/adminlte.css": "/adminlte/css/adminlte.css?id=8de7c1eedd981b0ef0b6",
     "/adminlte/css/siaji.css": "/adminlte/css/siaji.css?id=b346849d996e6c6f9d40",
     "/adminlte/plugins/fontawesome-free/css/all.css": "/adminlte/plugins/fontawesome-free/css/all.css?id=da9aca32ed693ed28f5d",
