--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,6 @@
 {
-    "/fancy/css/style.css": "/fancy/css/style.css?id=513bcaaca683b38c1b3e",
+    "/fancy/css/style.css": "/fancy/css/style.css?id=43ca25265b6146b21717",
+    "/fancy/css/siaji.css": "/fancy/css/siaji.css?id=8bb8c81c397a38829149",
     "/fancy/css/responsive/responsive.css": "/fancy/css/responsive/responsive.css?id=6c98b601dee0ef13d276",
     "/fancy/css/bootstrap/bootstrap.min.css": "/fancy/css/bootstrap/bootstrap.min.css?id=95df726a7936892cf645",
     "/fancy/css/others/animate.css": "/fancy/css/others/animate.css?id=cb67371414710491ee37",
@@ -8,6 +9,7 @@
     "/fancy/css/others/font-awesome.min.css": "/fancy/css/others/font-awesome.min.css?id=11561142ddf4044e4897",
     "/fancy/css/others/elegant-font.css": "/fancy/css/others/elegant-font.css?id=4a5af63d39dd424949e7",
     "/fancy/css/others/themify-icons.css": "/fancy/css/others/themify-icons.css?id=79a7ca0b383da3da212b",
+    "/fancy/css/others/select2/select2.css": "/fancy/css/others/select2/select2.css?id=953b2a0c38e48a025fad",
     "/fancy/js/jquery/jquery-2.2.4.min.js": "/fancy/js/jquery/jquery-2.2.4.min.js?id=710458dd559c957714ac",
     "/fancy/js/bootstrap/popper.min.js": "/fancy/js/bootstrap/popper.min.js?id=499c736b389842485292",
     "/fancy/js/bootstrap/bootstrap.min.js": "/fancy/js/bootstrap/bootstrap.min.js?id=46b549bdc90920f18a91",
