--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "fideloper/proxy": "^4.0",
         "jorenvanhocht/laravel-share": "^3.1",
         "laravel/framework": "^6.2",
+        "laravel/helpers": "^1.1",
         "laravel/tinker": "^1.0",
         "spatie/laravel-permission": "^3.4",
         "yajra/laravel-datatables-oracle": "^9.7"
